<resources>
    <string name="app_name">DuoYu</string>
    <string name="more_press_exit">press back again</string>
    <string name="space">&#160;</string>
    <string name="sure">sure</string>

    <!-- generate -->
    <string name="follow">follow</string>
    <string name="following">following</string>
    <string name="whether_logout">do your want to logout this account?</string>

    <!-- Login & Register -->
    <string name="btn_login">Login</string>
    <string name="login_error">login_error</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="duoyu_diary">DuoYu Diary.</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_verify_code">Input verify code</string>
    <string name="send_verify_code">Send Code</string>
    <string name="send_verify_code_delay">Delay (%d)</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="input_new_password">Input new password</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- forgot password -->
    <string name="retrieve_password">retrieve password</string>
    <string name="btn_send">send</string>

    <!-- discover -->
    <string name="title_tab_follow">Follow</string>
    <string name="title_tab_recent">Recent</string>
    <string name="title_tab_write">Write</string>
    <string name="diary">Diary</string>

    <!-- notification -->
    <string name="title_tab_attention">Attention</string>
    <string name="title_tab_liked">Liked</string>

    <!-- diary -->
    <string name="get_diary_error">get diary info error</string>
    <string name="correct">Correct</string>

    <!-- edit correct -->
    <string name="all_corrects">Corrects(%d)</string>
    <string name="corrects">Corrects</string>

    <!-- comment -->
    <string name="all_comments">Comments(%d)</string>
    <string name="comments">Comments</string>

    <!-- write diary -->
    <string name="btn_publish">Publish</string>
    <string name="input_content">input content</string>
    <string name="input_title">input_title</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="complete">Complete</string>

    <!-- user center -->
    <string name="tab_correct">Correct</string>
    <string name="tab_diary">Diary</string>
    <string name="tab_timeline">Timeline</string>
    <string name="edit_profile">Edit profile</string>
    <string name="all_diaries">Diaries(%d)</string>
    <string name="all_attending_diaries">Attending(%d)</string>
</resources>
