<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp">

    <EditText
        android:id="@+id/input_email"
        style="@style/EditStyle"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/input_your_email"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_verify_code"
            style="@style/EditStyle"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/input_verify_code"/>

        <online.duoyu.sparkle.widget.StatefulButton
            android:id="@+id/btn_send_verify_code"
            style="@style/State.Normal.CanSendVerifyCode"
            android:layout_gravity="center_vertical|right"
            android:text="@string/send_verify_code"
            android:layout_marginRight="10dp"
            app:stateCanSendVerifyCode="@style/State.Normal.CanSendVerifyCode"
            app:stateCanNotSendVerifyCode="@style/State.Normal.CanNotSendVerifyCode"/>
    </FrameLayout>

    <EditText
        android:id="@+id/input_password"
        style="@style/EditStyle"
        android:drawableRight="@mipmap/ic_launcher"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:fontFamily="sans-serif"
        android:hapticFeedbackEnabled="false"
        android:singleLine="true"
        android:hint="@string/input_new_password"/>

    <online.duoyu.sparkle.widget.StatefulButton
        android:id="@+id/btn_forgot_password"
        style="@style/State.Normal.Canceled"
        android:layout_marginTop="15dp"
        android:layout_gravity="right"
        android:text="@string/btn_send"
        app:stateCanceled="@style/State.Normal.Canceled"
        app:stateDone="@style/State.Normal.Done"/>
</LinearLayout>