<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- title bar begin -->

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_title_follow"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_primary_blue_round_title_bar_left"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/title_tab_follow"/>

            <TextView
                android:id="@+id/btn_title_recent"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_white_round_title_bar_mid"
                android:gravity="center"
                android:textColor="@color/primary_blue"
                android:textSize="14sp"
                android:text="@string/title_tab_recent"/>

            <TextView
                android:id="@+id/btn_title_write"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_white_round_title_bar_right"
                android:gravity="center"
                android:textColor="@color/primary_blue"
                android:textSize="14sp"
                android:text="@string/title_tab_write"/>

        </LinearLayout>

        <TextView
            android:id="@+id/month"
            style="@style/TextStyle.Normal.Primary_Blue"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/diary"/>
    </LinearLayout>

    <!-- title bar end -->

    <!-- content view pager begin -->

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar"/>

    <!-- content view pager end -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignTop="@id/view_pager"
        android:background="@drawable/shadow_for_title_bar"/>

</RelativeLayout>