<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!-- title bar begin -->

    <FrameLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_title_attention"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="?attr/defaultLeftTitleTabBackground"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/title_tab_attention"/>

            <TextView
                android:id="@+id/btn_title_liked"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="?attr/defaultMidTitleTabBackground"
                android:gravity="center"
                android:textColor="?attr/textColor"
                android:textSize="14sp"
                android:text="@string/title_tab_liked"/>

            <TextView
                android:id="@+id/btn_title_follow"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="?attr/defaultRightTitleTabBackground"
                android:gravity="center"
                android:textColor="?attr/textColor"
                android:textSize="14sp"
                android:text="@string/title_tab_follow"/>

        </LinearLayout>
    </FrameLayout>

    <!-- title bar end -->

    <!-- content view pager begin -->

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_bar"
        android:background="@color/white"/>

    <!-- content view pager end -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignTop="@id/view_pager"
        android:background="@drawable/shadow_for_title_bar"/>

</RelativeLayout>