<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardCoded">

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:paddingBottom="10dp"
        android:background="@color/white">

        <com.facebook.drawee.view.SimpleDraweeView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:placeholderImage="?attr/primaryColor"
            app:placeholderImageScaleType="fitCenter"
            app:roundedCornerRadius="2dp"/>

        <online.duoyu.sparkle.widget.StatefulButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/theme_btn_follow"
            style="@style/State.Small.Follow"
            android:layout_alignParentRight="true"
            app:stateFollow="@style/State.Small.Follow"
            app:stateFollowing="@style/State.Small.Following"/>

        <TextView
            android:id="@+id/nickname"
            style="@style/TextStyle.Middle.Black"
            android:layout_marginTop="5dp"
            android:layout_below="@id/avatar"
            android:layout_alignLeft="@id/avatar"
            android:text="nickname"/>

        <TextView
            android:id="@+id/email"
            style="@style/TextStyle.Small.Gray"
            android:layout_marginTop="5dp"
            android:layout_below="@id/nickname"
            android:layout_alignLeft="@id/nickname"/>

        <TextView
            android:id="@+id/followers_text"
            style="@style/TextStyle.Small.Gray"
            android:layout_alignBaseline="@id/email"
            android:layout_alignParentRight="true"
            android:text="followers"/>

        <TextView
            android:id="@+id/theme_followers"
            style="@style/TextStyle.Small.Primary"
            android:layout_toLeftOf="@id/followers_text"
            android:layout_alignBaseline="@id/followers_text"
            android:layout_marginRight="5dp"
            android:text="1000"/>

        <TextView
            android:id="@+id/following_text"
            style="@style/TextStyle.Small.Gray"
            android:layout_above="@id/followers_text"
            android:layout_alignParentRight="true"
            android:text="following"/>

        <TextView
            android:id="@+id/theme_following"
            style="@style/TextStyle.Small.Primary"
            android:layout_toLeftOf="@id/following_text"
            android:layout_alignBaseline="@id/following_text"
            android:layout_marginRight="5dp"
            android:text="200"/>

        <LinearLayout
            android:id="@+id/title_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_timeline"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="?attr/defaultLeftTitleTabBackground"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/tab_timeline"/>

            <TextView
                android:id="@+id/btn_my_diary"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="?attr/defaultMidTitleTabBackground"
                android:gravity="center"
                android:textColor="?attr/textColor"
                android:textSize="14sp"
                android:text="@string/tab_diary"/>

            <TextView
                android:id="@+id/btn_my_correct"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:background="?attr/defaultRightTitleTabBackground"
                android:gravity="center"
                android:textColor="?attr/textColor"
                android:textSize="14sp"
                android:text="@string/tab_correct"/>

        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/user_info"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/user_info"
        android:background="@drawable/shadow_for_title_bar"/>
</RelativeLayout>